--- a/Styles/Styles.css
+++ b/Styles/Styles.css
@@ -34,8 +34,15 @@ body {
     font-weight: 600;
     color: var(--third-color);
     text-decoration: none;
+    padding: 1em;
 }
-
+.cabecalho__menu__link:hover {
+    background-color: var(--hover-color);
+    color: var(--seconday-color);
+    border: 2px solid var(--third-color);
+    border-radius: 8px;
+    
+}
 
 .destaque {
     color: var(--third-color);
@@ -97,7 +104,7 @@ body {
     font-family: var(--text-font);
     font-weight: 600;
 }
-.presentation__links__link:hover {
+.presentation__links__navigation:hover {
     background-color: var(--hover-color);
     /* padding: 3%; */
 }
