--- a/Styles/Styles.css
+++ b/Styles/Styles.css
@@ -22,11 +22,14 @@ body {
     color: var(--seconday-color);    
 }
 .cabecalho{
-    padding: 2% 0% 0% 15%;
+    /*padding: 2% 0% 0% 15%;*/
+    padding-top: 0.15em;
 }
 .cabecalho__menu {
     display: flex;
-    gap: 80px;
+    gap: 5em;
+    flex-direction: row;
+    justify-content: center;
 }
 .cabecalho__menu__link {
     font-family: var(--text-font);
@@ -39,6 +42,7 @@ body {
 .cabecalho__menu__link:hover {
     background-color: var(--hover-color);
     color: var(--seconday-color);
+    padding: 0.875em;
     border: 2px solid var(--third-color);
     border-radius: 8px;
     
@@ -110,6 +114,8 @@ body {
 }
 .presentation__image {
     width: 50%;
+    border: 0.125em solid var(--third-color);
+    border-radius: 0.5em;
 }
 
 .rodape {    
